chore: fixed some overlapping styling

--- a/src/Styles/Content/aboutMe.scss
+++ b/src/Styles/Content/aboutMe.scss
@@ -23,6 +23,7 @@
       &::before {
         content: 'About Me';
         @include text-layer;
+        white-space: nowrap;
       }
     }
   }
