--- a/src/Styles/Global/_mixins.scss
+++ b/src/Styles/Global/_mixins.scss
@@ -49,7 +49,7 @@
     position: absolute;
     width: 100%;
     left: 4px;
-    bottom: -5px;
+    bottom: -6px;
     color: v.$linkColour;
 }
 
